--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,8 @@
 tasks:
   - init: npm install && npm run build
     command: npm run dev
+
+vscode:
+  extensions:
+    - esbenp.prettier-vscode@5.9.2:/ZjVG4nabMGxTqOcyglnfQ==
+    - dbaeumer.vscode-eslint@2.1.8:02aHhbJ0Q4aGdjHXlTdVKg==
