--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,10 @@
 tasks:
   - init: npm install && npm run build
     command: npm run dev
-    openMode: split-right
+ports:
+  - port: 3000
+    onOpen: open-preview
+    visibility: private
 
 vscode:
   extensions:
