--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "analyze": "ANALYZE=true npm run build"
   },
   "dependencies": {
     "next": "10.0.8",
@@ -13,6 +14,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^10.0.9",
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
