--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,9 @@
     "baseUrl": ".",
     "target": "es5",
     "paths": {
-      "app/*": [
-        "src/*"
-      ]
+      "app/*": ["src/*"]
     },
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -24,12 +18,6 @@
     "strict": true,
     "jsx": "preserve"
   },
-  "include": [
-    "next-env.d.ts",
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "./node_modules"
-  ]
+  "include": ["next-env.d.ts", "src"],
+  "exclude": ["node_modules", "./node_modules"]
 }
