--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@next/bundle-analyzer": "^10.0.9",
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-plugin-react": "^7.22.0",
     "prettier": "2.2.1",
     "typescript": "^4.2.3"
   }
