--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^10.0.9",
+    "@types/eslint": "^7.2.7",
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
