--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --fix && prettier . --write"
   },
   "dependencies": {
+    "contentful": "^8.2.0",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
