Fixes Tagir-A/exp#30

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,3 +5,7 @@ ports:
   - port: 3000
     onOpen: open-preview
     visibility: private
+
+vscode:
+  extensions:
+    - bradlc.vscode-tailwindcss@0.5.9:yRBWziGXnf16R7jUzlgn5w==
